# fun-with-rags

./: Presentation Advanced.ipynb  Presentation-Advanced.ipynb  Presentation.ipynb  README.md  pyproject.toml
data/docs/: a-very-old-man-with-enormous-wings.txt
extras/: Slides.pptx
